--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,24 +6,53 @@
     <title>Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <style>
+            .nav-link{
+                color:white
+            }
+            .navbar-nav li a:hover{
+                color: white;
+            }
+          </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-light bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="home">EMTech</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="img navbar-brand" style="margin-left: 16.6667%;" href="/home">
+                <img src="static/emtech_logo3.jpg" alt="EMTech Logo">
+            </a>
+        </div>
+      </nav>
+
+      <nav class="navbar navbar-expand-lg navbar-primary bg-primary">
+        <div class="container-fluid">
+            <a></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse" style="margin-left: 16.667%;" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="home">Home</a>
+                <a class="nav-link" aria-current="page" href="home">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="technicalVisit">Technical Visit</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="attachments">Attachments</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="customer">Customer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="data">Data</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="engineer">Engineer</a>
+            </li>
+              <li class="nav-item">
+                <a class="nav-link" href="customer-details">Customer Details</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="admin">Admin</a>
